# cached-historical-data-fetcher

./: .all-contributorsrc  .copier-answers.yml  .pre-commit-config.yaml  CHANGELOG  CONTRIBUTING.md  README.md  example.ipynb  pyproject.toml  renovate.json  setup.py
.github/ISSUE_TEMPLATE/: 1-bug_report.yml  2-feature-request.yml  config.yml
.github/workflows/: ci.yml  poetry-upgrade.yml
docs/: conf.py  index.md  installation.md  usage.md
src/cached_historical_data_fetcher/: __init__.py  io.py
src/cached_historical_data_fetcher/cache/: __init__.py  base.py  chunk.py  id.py
tests/: test_main.py
